// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Address: Stores postal addresses for customers.
Customer: Represents a customer in the CRM system.
Category: Represents categories to organize products.
CustomerSupportTicket: Records customer support tickets for complaints or assistance requests.
Employee: Represents employees in the CRM system for assigning tasks and order processing.
Order: Represents an order made by a customer.
OrderItem: Links products to orders and records specifics of each item in an order.
Product: Stores product information available for sale.
Payment: Records payments made by customers against their orders.
ProductCategory: Intersection table to associate products with categories.
ProductSupplier: Joins products to suppliers, indicating which supplier provides which product.
Supplier: Stores details of suppliers who provide products.
'''
}

Table Address {
    id INTEGER [primary key]
    customer_id INTEGER 
    street VARCHAR 
    city VARCHAR 
    state VARCHAR 
    zip_code VARCHAR 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    phone VARCHAR 
    date_joined DATETIME 
    }

Table Category {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    }

Table CustomerSupportTicket {
    id INTEGER [primary key]
    customer_id INTEGER 
    issue_description VARCHAR 
    date_created DATETIME 
    resolved INTEGER 
    }

Table Employee {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    email VARCHAR 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    order_date DATETIME 
    total_amount FLOAT 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    amount FLOAT 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    price FLOAT 
    }

Table Payment {
    id INTEGER [primary key]
    order_id INTEGER 
    amount_paid FLOAT 
    payment_date DATETIME 
    }

Table ProductCategory {
    id INTEGER [primary key]
    product_id INTEGER 
    category_id INTEGER 
    }

Table ProductSupplier {
    id INTEGER [primary key]
    product_id INTEGER 
    supplier_id INTEGER 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    contact_name VARCHAR 
    phone VARCHAR 
    }



// Relationships
    Ref: Address.(customer_id) < Customer.(id)
    Ref: CustomerSupportTicket.(customer_id) < Customer.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: OrderItem.(product_id) < Product.(id)
    Ref: Payment.(order_id) < Order.(id)
    Ref: ProductCategory.(category_id) < Category.(id)
    Ref: ProductCategory.(product_id) < Product.(id)
    Ref: ProductSupplier.(product_id) < Product.(id)
    Ref: ProductSupplier.(supplier_id) < Supplier.(id)
